2010-11-11  Till Kamppeter <till.kamppeter@gmail.com>

	* fileconverter.c: Make the check for the text filter actually
	  work. Before, the text filter choice from the configuration file
	  was simply taken for good and not checked whether it is supported.
	  Thanks to Abel Abraham Camarillo Ojeda (spam at verlet dot org)
	  for reporting this problem (bug #551).

2010-08-27  Till Kamppeter <till.kamppeter@gmail.com>

	* options.c: Made sure that the unhtmlify() function does not write
	  the zero byte to mark the string end beyond the buffer. Also use a
	  much larger buffer for parsing "*FoomaticRIPOptionPrototype:" in
	  the PPD file (bug #515).

	* util.c: In strncpy_tochar() use the isempty() function to check
	  whether the input string is empty (bug #514).

2010-08-10  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.5.

	* VERSION, README, USAGE, configure.ac: Updated for release 4.0.5.

2010-07-07  Till Kamppeter <till.kamppeter@gmail.com>

	* options.c: Make substitution of zeros by the the user-defined
	  page size in the prototype string for the custom page size
	  working. Before, only substitution of %0 and %1 worked reliably.
	  Thanks to Lutz Sammer (johns98 at web dot de) for reporting this
	  problem (see also bug 514, comment #1).

	* options.c: Make custom page size settings also work if the custom
	  size is set via embedded PostScript code and the comment to mark
	  the selected option setting is only "%% FoomaticRIPOptionSetting:
	  PageSize=Custom", without the size and unit parameters. Thanks to
	  Lutz Sammer for reporting this problem (see also bug 514, comment #1).

2010-07-02  Till Kamppeter <till.kamppeter@gmail.com>

	* spooler.c: Config file for the default printer in spooler-less
	  (direct) printing mode was not read correctly. Thanks to Lutz
	  Sammer (johns98 at web dot de) for reporting this problem (see
	  also bug 514, comment #1).
